ninjam (0.02-6) unstable; urgency=low

  * added jack transport fix from robin
  * added patch for multiple outputs from expertsleepers

 -- Tobias Gehrig <tobias@gehrignet.de>  Wed, 22 Nov 2006 03:58:24 +0100

ninjam (0.02-5) unstable; urgency=low

  * make number of in-/output channels and client name of the
    jack driver variable

 -- Tobias Gehrig <tobias@gehrignet.de>  Sat, 18 Nov 2006 18:41:59 +0100

ninjam (0.02-4) unstable; urgency=low

  * reenabled alsa driver in addition to the jack driver
  * some more conversions from char* to const char*

 -- Tobias Gehrig <tobias@gehrignet.de>  Sat, 18 Nov 2006 03:47:07 +0100

ninjam (0.02-3) unstable; urgency=low

  * change filename parameter in WaveWriter to const char*

 -- Tobias Gehrig <tobias@gehrignet.de>  Fri, 17 Nov 2006 18:24:32 +0100

ninjam (0.02-2) unstable; urgency=low

  *  changed SetLocalChannelInfo to get const char* name as input
     instead of char* name

 -- Tobias Gehrig <tobias@gehrignet.de>  Fri, 17 Nov 2006 01:48:49 +0100

ninjam (0.02-1) unstable; urgency=low

  * Initial release of ninjam library
  * client and server build modified to use that library
  * patched version of cursesclient using jack
  * some parameters changed from char* to const char*

 -- Tobias Gehrig <tobias@gehrignet.de>  Mon, 15 Nov 2006 00:57:01 +0100
