@@ -2,6 +2,7 @@ ninjam (0.02-6) unstable; urgency=low
 
   * added jack transport fix from robin
   * added patch for multiple outputs from expertsleepers
+  * fix problem with possibly negative output channel number
 
  -- Tobias Gehrig <tobias@gehrignet.de>  Wed, 22 Nov 2006 03:58:24 +0100
 
